--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-brightness": "~10.3.0",
     "expo-constants": "~13.2.4",
     "expo-font": "^10.2.1",
+    "expo-image-picker": "~13.3.1",
     "expo-linear-gradient": "~11.4.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.15.0",
