--- a/package.json
+++ b/package.json
@@ -24,13 +24,17 @@
     "expo-font": "^10.2.1",
     "expo-image-picker": "~13.3.1",
     "expo-linear-gradient": "~11.4.0",
+    "expo-location": "~14.3.0",
     "expo-status-bar": "~1.4.0",
     "firebase": "^9.15.0",
+    "idb": "^7.1.1",
+    "lodash": "^4.17.21",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-native": "0.69.6",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-maps": "0.31.1",
     "react-native-paper": "5.0.0-rc.6",
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
@@ -42,6 +46,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/lodash": "^4.14.191",
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "@types/react-native-sqlite-storage": "^5.0.2",
