--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native": "0.69.6",
     "react-native-animatable": "^1.3.3",
     "react-native-gesture-handler": "~2.5.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-maps": "0.31.1",
     "react-native-paper": "5.0.0-rc.6",
     "react-native-safe-area-context": "4.3.1",
@@ -43,7 +44,8 @@
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
-    "sharp-cli": "^3.0.0"
+    "sharp-cli": "^3.0.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -54,6 +56,7 @@
     "@types/react-native-sqlite-storage": "^5.0.2",
     "@types/react-redux": "^7.1.24",
     "@types/redux": "^3.6.0",
+    "@types/uuid": "^9.0.0",
     "typescript": "~4.3.5"
   },
   "private": true
