--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-native-safe-area-context": "4.3.1",
     "react-native-screens": "~3.15.0",
     "react-native-sqlite-storage": "^6.0.1",
+    "react-native-table-component": "^1.2.2",
     "react-native-web": "~0.18.7",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
@@ -54,6 +55,7 @@
     "@types/react": "~18.0.14",
     "@types/react-native": "~0.69.1",
     "@types/react-native-sqlite-storage": "^5.0.2",
+    "@types/react-native-table-component": "^1.2.4",
     "@types/react-redux": "^7.1.24",
     "@types/redux": "^3.6.0",
     "@types/uuid": "^9.0.0",
